fix carousel laurel align margin bottom

--- a/site/styles/_awards.scss
+++ b/site/styles/_awards.scss
@@ -22,7 +22,6 @@
   .meta-award-nomination {
     display: flex;
     max-width: 370px;
-    line-height: 20px;
   }
 
   .meta-award-nomination-icon {
